<resources>
    <string name="app_name">Karaoke</string>
    <string name="log_in">Log in</string>
    <string name="sing_up">Sing up</string>
    <string name="registration">Registration</string>
    <string name="enter_your_first_name">Enter your first name</string>
    <string name="first_name">First name</string>
    <string name="second_name">Second name</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="ok">OK</string>
    <string name="settings">⚙</string>
    <string name="microphone">🎤</string>
    <string name="profile">👤</string>
    <string name="find_track">Find track</string>
    <string name="find_user">Find user</string>
    <string name="first_name_text">First name:</string>
    <string name="second_name_text">Second name:</string>
    <string name="profileTitle">Profile</string>
    <string name="track_list">Track list</string>
    <string name="email_text">Email</string>
    <string name="plus">+</string>
    <string name="back">back</string>
    <string name="add">+</string>
</resources>