<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ProfileFragment">
    <LinearLayout
        android:id="@+id/profileTitleLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/profileTitle"
            android:layout_width="0dp"
            android:layout_height="100dp"
            android:layout_weight="1"
            android:text="@string/profileTitle"
            android:gravity="center"
            android:textSize="30sp" />
    </LinearLayout>
    <LinearLayout
        android:id="@+id/firstNameLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/profileTitleLayout">

        <TextView
            android:id="@+id/firstNameText"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:text="@string/first_name_text"
            android:textSize="25sp" />

        <TextView
            android:id="@+id/firstName"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:text="TextView"
            android:textSize="25sp" />
    </LinearLayout>
    <LinearLayout
        android:id="@+id/secondNameLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/firstNameLayout">

        <TextView
            android:id="@+id/secondNameText"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:text="@string/second_name_text"
            android:textSize="25sp" />

        <TextView
            android:id="@+id/secondName"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:text="TextView"
            android:textSize="25sp" />
    </LinearLayout>
</RelativeLayout>
